# ZERO

./: .cursorrules  .dockerignore  .env.backup.1771620455480  .env.example  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  .pre-commit-config.yaml  .secrets.baseline  .swiftformat  .swiftlint.yml  .windsurfrules  AGENTS.md  AGENTS.md.backup.2026-02-20T20-47-29-410Z  AGENTS_EN.md  ARCHITECTURE.md  BENCHMARK_ZERO_VS_OPENCLAW.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  Dockerfile  Dockerfile.sandbox-browser  GOVERNANCE.md  LICENSE  MEMORY.md  README.md  README_EN.md  README_ES.md  SECURITY.md  SECURITY_PT.md  SOUL.md  ZERO-UPGRADE-ROADMAP.md  ZERO-UPGRADE-ROADMAP_EN.md  appcast.xml  apply_patch.exp  build_ui_vps.exp  cat_config.exp  cat_index.exp  check_build_time.exp  check_env.exp  (+113 more)
.aios-core/: agents  constitution.md  core-config.yaml  framework-config.yaml  index.esm.js  index.js  install-manifest.yaml  package-lock.json  package.json  project-config.yaml  user-guide.md  version.json
.claude/: CLAUDE.md
.github/: dependabot.yml
.husky/: pre-commit
Swabble/: Package.resolved  README.md
docs/: CNAME  FIX_TEMPLATE_TELEGRAM_TESTS.md  SECURITY_DECISIONS.md  SELF_EVOLUTION.md  SELF_EVOLUTION_EN.md  _config.yml  bedrock.md  brave-search.md  broadcast-groups.md  date-time.md  debugging.md  docs.json  environment.md  hooks.md  index.md  index_EN.md  logging.md  multi-agent-sandbox-tools.md  network.md  perplexity.md  plugin.md  (+11 more)
rust-core/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  ratchet.darwin-x64.node  ratchet.node.bak
rust-core/src/: lib.rs
(+3583 files in other folders)
