[package]
name = "ratchet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
indexmap = "2.0.0"
regex = "1.10.2"
unicode-normalization = "0.1.22"

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
